<!-- Copyright (c) [2016] [Luan Thanh Thai] -->
<!-- See the file LICENSE.txt for copying permission -->

<resources>
    <string name="app_name">LiteWorkoutTimer</string>
    <string name="toolbar_create_routines">Create routines</string>
    <string name="toolbar_settings">Settings</string>

    // Icons
    <string name="timer_repeat">repeat</string>
    <string name="timer_sound">timer_sound</string>
    <string name="menu_ic_add_routine">Add routine</string>
    <string name="menu_ic_vertical">Routine menu</string>

    // Keypad
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="digit0">0</string>
    <string name="delete">del</string>
    <string name="delete_description">delete</string>

    // Timer buttons
    <string name="start_button">START</string>
    <string name="rest_button">REST</string>
    <string name="pause_button">PAUSE</string>
    <string name="reset_button">RESET</string>
    <string name="restart_button">RESTART</string>

    // Timer clock view
    <string name="minutes_text">00</string>
    <string name="colon_text">:</string>
    <string name="seconds_text">00</string>

    // Create routine
    <string name="edit_routine">edit routine</string>

    // Settings
    <string name="settings">Settings</string>
    <string name="audio">Audio</string>
    <string name="repeat">Repeat</string>
    <string name="delay_start_time">Delay start time</string>
    <string name="delay_time">Delay time</string>
    <string name="rest_time">Rest time</string>
    <string name="time_unit_second">s</string>
    <string name="time_unit_minute">m</string>
    <string name="default_time">00</string>



</resources>