<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timer_minutes_text_view"
            android:text="@string/minutes_text"
            style="@style/DigitalTimerView"/>

        <TextView
            android:id="@+id/timer_colon_view"
            android:text="@string/colon_text"
            android:clickable="false"
            style="@style/DigitalTimerView"/>

        <TextView
            android:id="@+id/timer_seconds_text_view"
            android:text="@string/seconds_text"
            style="@style/DigitalTimerView"/>

    </LinearLayout>

