<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="bottom"
             android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        style="?android:attr/buttonBarStyle">

        <Button
            android:background="?android:attr/selectableItemBackground"
            style="@style/TimerButtons"/>

        <Button
            android:id="@+id/button_restart"
            android:background="@drawable/timer_start_button"
            android:text="@string/restart_button"
            style="@style/TimerButtons"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button_reset"
            android:background="@drawable/timer_reset_button"
            android:text="@string/reset_button"
            style="@style/TimerButtons"/>

        <Button
            android:id="@+id/button_pause"
            android:background="@drawable/timer_pause_button"
            android:text="@string/pause_button"
            style="@style/TimerButtons"/>

    </LinearLayout>

</RelativeLayout>