<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginStart="@dimen/text_view_margin_left"
              android:layout_marginLeft="@dimen/text_view_margin_left"
              android:layout_marginEnd="@dimen/text_view_margin_right"
              android:layout_marginRight="@dimen/text_view_margin_right"
              android:layout_marginTop="@dimen/text_view_header_top"
              android:layout_marginBottom="@dimen/text_view_header_bottom">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_view_margin_left"
        android:textSize="@dimen/text_view_header_size"
        android:text="@string/settings"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_view_margin_bottom">

        <TextView
            android:id="@+id/delay_start_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_view_size"
            android:text="@string/delay_start_time"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/delay_start_time_view"
            android:layout_alignEnd="@id/delay_start_time_view"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <EditText
                android:layout_width="25dp"
                android:layout_height="17dp"
                android:padding="2dp"
                android:textSize="@dimen/text_view_size"
                android:inputType="number"
                android:gravity="center"
                android:textColor="@color/LightBlue_500"
                android:text="@string/default_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_view_size"
                android:text="@string/time_unit_second"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_view_margin_bottom">

        <TextView
            android:id="@+id/delay_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_view_size"
            android:text="@string/delay_time"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/delay_time_view"
            android:layout_alignEnd="@id/delay_time_view"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <EditText
                android:id="@+id/delay_time_m_edit"
                android:layout_width="25dp"
                android:layout_height="17dp"
                android:padding="2dp"
                android:textSize="@dimen/text_view_size"
                android:inputType="number"
                android:gravity="center"
                android:textColor="@color/LightBlue_500"
                android:text="@string/default_time"/>

            <TextView
                android:id="@+id/delay_time_m_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_view_size"
                android:text="@string/time_unit_minute"/>

            <EditText
                android:layout_width="25dp"
                android:layout_height="17dp"
                android:padding="2dp"
                android:textSize="@dimen/text_view_size"
                android:inputType="number"
                android:gravity="center"
                android:textColor="@color/LightBlue_500"
                android:text="@string/default_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_view_size"
                android:text="@string/time_unit_second"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_view_margin_bottom">

        <TextView
            android:id="@+id/rest_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_view_size"
            android:text="@string/rest_time"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/rest_time_view"
            android:layout_alignEnd="@id/rest_time_view"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <EditText
                android:layout_width="25dp"
                android:layout_height="17dp"
                android:padding="2dp"
                android:textSize="@dimen/text_view_size"
                android:inputType="number"
                android:gravity="center"
                android:textColor="@color/LightBlue_500"
                android:text="@string/default_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_view_size"
                android:text="@string/time_unit_minute"/>

            <EditText
                android:layout_width="25dp"
                android:layout_height="17dp"
                android:padding="2dp"
                android:textSize="@dimen/text_view_size"
                android:inputType="number"
                android:gravity="center"
                android:textColor="@color/LightBlue_500"
                android:text="@string/default_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_view_size"
                android:text="@string/time_unit_second"/>

        </LinearLayout>

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <include
        android:id="@+id/keypad_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/keypad"/>

</LinearLayout>